5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1692_1100.log
== TEST (2019-04-25 18:46:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=float(input("valor da celula: "))
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	

-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 18:46:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=float(input("valor da celula: "))
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	

-- EXECUTION TIME:
0.15315
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 18:47:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=float(input("valor da celula: "))
if(celula==2):
	print("Entrada:" + celula)
	print("Animal: Tartaruga")
elif(celula==5):
	print("Entrada:" + celula)
	print("Animal: Garca")
elif(celula==10):
	print("Entrada:" + celula)
	print("Animal: Arara")
elif(celula==20):
	print("Entrada:" + celula)
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Entrada:" + celula)
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Entrada:" + celula)
	print("Animal: Garoupa")
else:
	print("Entrada:" + celula)
	print("Animal: invalido")
	

-- EXECUTION TIME:
0.136664
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1692/1100/main.py", line 21, in <module>
    print("Entrada:" + celula)
TypeError: Can't convert 'float' object to str implicitly

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:47:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=float(input("valor da celula: "))
if(celula==2):
	print("Entrada:" + celula)
	print("Animal: Tartaruga")
elif(celula==5):
	print("Entrada:" + celula)
	print("Animal: Garca")
elif(celula==10):
	print("Entrada:" + celula)
	print("Animal: Arara")
elif(celula==20):
	print("Entrada:" + celula)
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Entrada:" + celula)
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Entrada:" + celula)
	print("Animal: Garoupa")
else:
	print("Entrada:" + celula)
	print("Animal: invalido")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print("Entrada:" + celula)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 18:48:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=float(input("valor da celula: "))
if(celula==2):
	print("Entrada:" + celula)
	print("Animal: Tartaruga")
elif(celula==5):
	print("Entrada:" + celula)
	print("Animal: Garca")
elif(celula==10):
	print("Entrada:" celula)
	print("Animal: Arara")
elif(celula==20):
	print("Entrada:" celula)
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Entrada:"  celula)
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Entrada:" celula)
	print("Animal: Garoupa")
else:
	print("Entrada:" celula)
	print("Animal: invalido")
	

-- EXECUTION TIME:
0.147117
-- ERROR:
  File "/home/codebench/codes/1692/1100/main.py", line 12
    print("Entrada:" celula)
                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:48:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=float(input("valor da celula: "))
if(celula==2):
	print("Entrada:" + celula)
	print("Animal: Tartaruga")
elif(celula==5):
	print("Entrada:" + celula)
	print("Animal: Garca")
elif(celula==10):
	print("Entrada:" celula)
	print("Animal: Arara")
elif(celula==20):
	print("Entrada:" celula)
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Entrada:"  celula)
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Entrada:" celula)
	print("Animal: Garoupa")
else:
	print("Entrada:" celula)
	print("Animal: invalido")
	

-- ERROR:
File "XXXX", line 12
    print("Entrada:" celula)
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:48:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=float(input("valor da celula: "))
if(celula==2):
	print("Entrada:" + celula)
	print("Animal: Tartaruga")
elif(celula==5):
	print("Entrada:" + celula)
	print("Animal: Garca")
elif(celula==10):
	print("Entrada:" + celula)
	print("Animal: Arara")
elif(celula==20):
	print("Entrada:" + celula)
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Entrada:" + celula)
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Entrada:" + celula)
	print("Animal: Garoupa")
else:
	print("Entrada:" + celula)
	print("Animal: invalido")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print("Entrada:" + celula)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:49:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=float(input("valor da celula: "))
if(celula==2):
	print("Entrada:" + celula)
	print("Animal: Tartaruga")
elif(celula==5):
	print("Entrada:" + celula)
	print("Animal: Garca")
elif(celula==10):
	print("Entrada:" + celula)
	print("Animal: Arara")
elif(celula==20):
	print("Entrada:" + celula)
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Entrada:" + celula)
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Entrada:" + celula)
	print("Animal: Garoupa")
else:
	print("Entrada:" + celula)
	print("Animal: invalido")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print("Entrada:" + celula)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:08:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=float(input("valor da celula: "))
print("Entrada:" + celula )
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Entrada:" + celula )
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:09:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=float(input("valor da celula: "))
print("Entrada:" "" celula )
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	

-- ERROR:
File "XXXX", line 5
    print("Entrada:" "" celula )
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:10:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=float(input("valor da celula: "))
print("Entrada:" + celula)
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Entrada:" + celula)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 21:11:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=float(input("valor da celula: "))
print("Entrada:"+""celula)
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	

-- EXECUTION TIME:
0.233345
-- ERROR:
  File "/home/codebench/codes/1692/1100/main.py", line 5
    print("Entrada:"+""celula)
                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:11:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=float(input("valor da celula: "))
print("Entrada:"+""celula)
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	

-- ERROR:
File "XXXX", line 5
    print("Entrada:"+""celula)
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:13:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=float(input("valor da celula: "))
print("Entrada:" celula)
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	

-- ERROR:
File "XXXX", line 5
    print("Entrada:" celula)
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:16:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=float(input("valor da celula: "))
print("Entrada:" " " celula)
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	

-- ERROR:
File "XXXX", line 5
    print("Entrada:" " " celula)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:16:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=float(input("valor da celula: "))
print("Entrada: " " " celula)
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	

-- ERROR:
File "XXXX", line 5
    print("Entrada: " " " celula)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:16:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=float(input("valor da celula: "))
print("Entrada: "+" "+ celula)
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Entrada: "+" "+ celula)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:25:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=float(input("valor da celula: "))
print("Entrada: " + celula)
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Entrada: " + celula)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:35:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=float(input("valor da celula: "))
print("Entrada: " + celula)
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Entrada: " + celula)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:41:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=int(input("valor da celula: "))
print("Entrada: " + celula)
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	

-- EXECUTION TIME:
0.126595
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1692/1100/main.py", line 5, in <module>
    print("Entrada: " + celula)
TypeError: Can't convert 'int' object to str implicitly

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:42:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=int(input("valor da celula: "))
print("Entrada: ", celula)
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	

-- EXECUTION TIME:
0.170605
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:47:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=int(input("valor da celula: "))
print("Entrada: ", celula)
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	

-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:47:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=int(input("valor da celula: "))
print("Entrada: ", celula)
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	

-- EXECUTION TIME:
0.151807
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:47:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=int(input("valor da celula: "))
print("Entrada: ", celula)
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	

-- EXECUTION TIME:
0.189249
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  100
Animal: Garoupa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:47:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=int(input("valor da celula: "))
print("Entrada: ", celula)
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	

-- EXECUTION TIME:
0.203115
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  100
Animal: Garoupa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:47:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=int(input("valor da celula: "))
print("Entrada: ", celula)
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	

-- EXECUTION TIME:
0.157089
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  100
Animal: Garoupa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:47:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=int(input("valor da celula: "))
print("Entrada: ", celula)
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	

-- EXECUTION TIME:
0.293189
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1692/1100/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:47:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=int(input("valor da celula: "))
print("Entrada: ", celula)
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	

-- EXECUTION TIME:
0.211642
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  50
Animal: Onca-pintada
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  7
Animal: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:47:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=int(input("valor da celula: "))
print("Entrada: ", celula)
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	

-- EXECUTION TIME:
0.209281
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  7
Animal: invalido
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  50
Animal: Onca-pintada
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  7
Animal: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:47:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=int(input("valor da celula: "))
print("Entrada: ", celula)
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	

-- EXECUTION TIME:
0.309705
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  50
Animal: Onca-pintada
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  100
Animal: Garoupa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:47:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=int(input("valor da celula: "))
print("Entrada: ", celula)
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	

-- EXECUTION TIME:
0.413948
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:47:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=int(input("valor da celula: "))
print("Entrada: ", celula)
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	

-- EXECUTION TIME:
0.879374
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1692/1100/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:47:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=int(input("valor da celula: "))
print("Entrada: ", celula)
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	

-- EXECUTION TIME:
0.355392
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  50
Animal: Onca-pintada
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:47:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=int(input("valor da celula: "))
print("Entrada: ", celula)
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	

-- EXECUTION TIME:
0.295894
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1692/1100/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:48:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=int(input("valor da celula: "))
print("Entrada:", celula)
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	

-- EXECUTION TIME:
0.1343
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:48:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=int(input("valor da celula: "))
print("Entrada:", celula)
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	

-- EXECUTION TIME:
0.136066
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:48:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=int(input("valor da celula: "))
print("Entrada:", celula)
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	

-- EXECUTION TIME:
0.107222
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:48:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=int(input("valor da celula: "))
print("Entrada:", celula)
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:49:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=int(input("valor da celula: "))
print("Entrada:", celula)
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:49:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=int(input("valor da celula: "))
print("Entrada:", celula)
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:49:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=int(input("valor da celula: "))
print("Entrada:", celula)
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	

-- EXECUTION TIME:
0.20173
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:51:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=int(input("valor da celula: "))
print("Entrada:", celula)
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	

-- EXECUTION TIME:
0.31085
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:51:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=int(input("valor da celula: "))
print("Entrada:", celula)
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:51:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=int(input("valor da celula: "))
print("Entrada:", celula)
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
	

-- EXECUTION TIME:
0.151176
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:53:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=float(input("valor da celula: "))
print("Entrada:", celula)
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
	

-- EXECUTION TIME:
0.181037
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100.0
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7.0
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50.0
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:53:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
celula=int(input("valor da celula: "))
print("Entrada:", celula)
if(celula==2):
	print("Animal: Tartaruga")
elif(celula==5):
	print("Animal: Garca")
elif(celula==10):
	print("Animal: Arara")
elif(celula==20):
	print("Animal: Mico-leao-dourado")
elif(celula==50):
	print("Animal: Onca-pintada")
elif(celula==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
	

-- EXECUTION TIME:
0.218562
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
